feat: implemented playing sounds when you click the mouse and press the keys

--- a/drum-kit/index.html
+++ b/drum-kit/index.html
@@ -8,8 +8,53 @@
         <title>Drum Kit</title>
     </head>
     <body>
-        <div class="keys">
-            
+        <div class="notes">
+            <div data-key="KeyA" class="note">
+                <div class="note_text">
+                    a<br><span>clap</span>
+                </div>
+            </div>
+            <div data-key="KeyS" class="note">
+                <div class="note_text">
+                    s<br><span>hihat</span>
+                </div>
+            </div>
+            <div data-key="KeyD" class="note">
+                <div class="note_text">
+                    d<br><span>kick</span>
+                </div>
+            </div>
+            <div data-key="KeyF" class="note">
+                <div class="note_text">
+                    f<br><span>openhat</span>
+                </div>
+            </div>
+            <div data-key="KeyG" class="note">
+                <div class="note_text">
+                    g<br><span>boom</span>
+                </div>
+            </div>
+            <div data-key="KeyH" class="note">
+                <div class="note_text">
+                    h<br><span>ride</span>
+                </div>
+            </div>
+            <div data-key="KeyJ" class="note">
+                <div class="note_text">
+                    j<br><span>snare</span>
+                </div>
+            </div>
+            <div data-key="KeyK" class="note">
+                <div class="note_text">
+                    k<br><span>tom</span>
+                </div>
+            </div>
+            <div data-key="KeyL" class="note">
+                <div class="note_text">
+                    l<br><span>tink</span>
+                </div>
+            </div>
         </div>
     </body>
+    <script src="js/script.js"></script>
 </html>
