feat: add fullscreen btn & btn for change background

--- a/drum-kit/index.html
+++ b/drum-kit/index.html
@@ -8,6 +8,9 @@
         <title>Drum Kit</title>
     </head>
     <body>
+        <div class="fullscreen">
+            <img src="assets/icons/fullscreen.svg" alt="fullscreen" class="fullscreen_icon">
+        </div>
         <div class="notes">
             <div data-key="KeyA" class="note">
                 <div class="note_text">
@@ -55,6 +58,7 @@
                 </div>
             </div>
         </div>
+        <button class="change_background">Change background</button>
     </body>
     <script src="js/script.js"></script>
 </html>
