feat: add btn for playing bit

--- a/drum-kit/index.html
+++ b/drum-kit/index.html
@@ -58,7 +58,8 @@
                 </div>
             </div>
         </div>
-        <button class="change_background">Change background</button>
+        <button class="btn btn_play">Play bit</button>
+        <button class="btn btn_background">Change background</button>
     </body>
     <script src="js/script.js"></script>
 </html>
